updated the README

--- a/README
+++ b/README
@@ -55,7 +55,6 @@ Gebruikt alleen de stack wanneer dat nodig is. Indien we genoeg hebben aan allee
 Expressies werken met variables, constanten en kunnen complex in elkaar worden gezet. bijvoorbeeld 'j := (1*j+1)*(j+1*2)*(1+1*j)' werkt.
 Function calls werken (ook recursief).
 If statements werken.
-Repeats werken.
 
 Limitaties Compiler:
 
@@ -63,4 +62,5 @@ Maximium van 4 parameters in function calls (meerdere variable in een functie no
 In een function call kunnen expressies worden gebruikt maar parameter 
 Alleen de volgende operator zijn geimplementeerd: +, *, -, :=, (), =. Vergelijken '=' en assignment ':=' kunnen alleen aan de "top" van de expression worden gebruikt. Bijvoorbeeld x = (3 * 5 + 2) + 1 is valide, maar ook (2 * x) = 3. (3 = x) + (2 = x) werkt *niet*. Ze moeten logischerwijs op het laatst worden uitgevoerd.
 array en string datatypes zijn niet geimplementeerd.
-Geen error handeling. 
+Geen error handeling.
+In tegenstelling tot de interpreter werken repeats niet.
